--- a/src/app/project/project.page.html
+++ b/src/app/project/project.page.html
@@ -75,12 +75,18 @@
   <ion-icon name="ellipsis-horizontal-circle" ></ion-icon>
   <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Other' | translate }}</ion-text></ion-label>
 </ion-item>
-<div class="separator"></div>
-<ion-item lines="none"  tooltip="{{'PROJECT.OtherMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="toggleCommentsPanel()">
-  <ion-icon name="chatbubbles-outline" ></ion-icon>
-   <ion-badge>{{comments.length}}</ion-badge>
-  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start withBadge"><ion-text >Commentaires</ion-text></ion-label>
+<div class="separator"  *ngIf="accessRights.write === true" ></div>
+<ion-item lines="none"  tooltip="{{'PROJECT.CommentsMenuTooltip' | translate }}"  [options]="tooltipOptions"  (click)="toggleCommentsPanel()"  *ngIf="accessRights.write === true" >
+  <ion-icon name="flag-outline" ></ion-icon>
+  <ion-badge>{{comments.length}}</ion-badge>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start withBadge"><ion-text >{{'EXECUTIVE.Comments' | translate }}</ion-text></ion-label>
 </ion-item>
+<div class="separator"></div>
+<ion-item lines="none"  tooltip="{{'PROJECT.SlackMenuTooltip' | translate }}"  [options]="tooltipOptions"  target="_blank" [href]="slackUrl"  *ngIf="isSlackInstalled ===true" >
+  <ion-icon name="logo-slack"></ion-icon>
+  <ion-label [ngClass]="{'ion-hide': expandedMenu ===false} " class="ion-margin-start"><ion-text >{{'EXECUTIVE.Slack' | translate }}</ion-text></ion-label>
+</ion-item>
+
 <div class="separator"></div>
 <ion-item lines="none" (click)="requestRemoveProject()" *ngIf="project.ownerUid === userIds.uid">
   <ion-icon name="trash-outline"></ion-icon>
@@ -92,12 +98,13 @@
  <ion-icon name="chevron-back-outline" (click)="expandMenu()" *ngIf="expandedMenu ===true" class="expandButton"></ion-icon>
 </ion-footer>
 </ion-col>
+<ion-col [ngClass]="{'commentsColHidden' : commentsPanelDisplayed ===false}" class="commentsCol"  *ngIf="accessRights.write === true" >
+  <app-comments [projectId]="projectId" [userIds]="userIds" (closed)="closeCommentsPanel($event)"></app-comments>
+</ion-col>
 <ion-col class="shadowContent">
   <ion-router-outlet id="project-content"></ion-router-outlet>
 </ion-col>
-<ion-col [ngClass]="{'ion-hide' : commentsPanelDisplayed ===false}" class="commentsCol">
-  <app-comments [projectId]="projectId" [userIds]="userIds"></app-comments>
-</ion-col>
+
 </ion-row>
 </ion-grid>
  <!--
