--- a/src/app/admin/tools/tools.page.html
+++ b/src/app/admin/tools/tools.page.html
@@ -1,10 +1,6 @@
 <ion-content>
-	<ng-select [items]="items"
-           bindLabel="name"
-           bindValue="id"
-           [(ngModel)]="selected">
-</ng-select>
-	<app-tool *ngFor="let tool of tools" [tool]="tool" mode="admin"></app-tool>
-	<ion-button fill="outline" class="ion-margin" (click)="requestAddTool()"><ion-icon name="add-outline" ></ion-icon>Ajouter un outil</ion-button>
+
+	<ion-button fill="outline" class="ion-margin" [routerLink]="['tool',{mode:'add'}]"><ion-icon name="add-outline" ></ion-icon>Ajouter un outil</ion-button>
+	<app-tool *ngFor="let tool of tools" [tool]="tool" mode="admin"  [routerLink]="['tool/'+tool.id]"></app-tool>
 
 </ion-content>
