--- a/src/app/project/executive/resources/resource-popover/resource-popover.component.html
+++ b/src/app/project/executive/resources/resource-popover/resource-popover.component.html
@@ -77,8 +77,22 @@
 								</div>
 							</ion-col>
 							<ion-col>
-								<p class="installationSteps ion-padding" [innerHTML]="selectedApplication.installationSteps"></p>
+								<ion-segment (ionChange)="segmentAppChanged($event)" value="description">
+									<ion-segment-button value="description">
+										<ion-label >Description</ion-label>
+									</ion-segment-button>
+									<ion-segment-button value="installation">
+										<ion-label>Installation</ion-label>
+									</ion-segment-button>
+								</ion-segment>
+								<div *ngIf="selectedAppButton === 'description'">
+									<p class="installationSteps ion-padding" [innerHTML]="selectedApplication.installationSteps"></p>
+								</div>
+								<div *ngIf="selectedAppButton === 'installation'">
+									<p class="installationSteps ion-padding" [innerHTML]="selectedApplication.installationDescription"></p>
+								</div>
 								<a [href]="slackButtonHref" (click)="addApplicationSlack()"><img alt="Add to Slack" height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcSet="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x" /></a>
+
 							</ion-col>
 						</ion-row>
 					</ion-grid>
