--- a/src/app/project/executive/resources/resource-popover/resource-popover.component.scss
+++ b/src/app/project/executive/resources/resource-popover/resource-popover.component.scss
@@ -159,3 +159,12 @@
 
 	}
 }
+.slackExample{
+	font-size: 13px;
+    color: #e01e5a;
+    background-color: #f8f8f8;
+    padding: 4px 8px;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    font-family: Monaco,Menlo,Consolas,Courier New,monospace!important;
+}
