--- a/src/app/landing-page/landing-page.page.html
+++ b/src/app/landing-page/landing-page.page.html
@@ -25,7 +25,7 @@
 				<span>{{'LANDINGPAGE.subContentTitle1Text5' | translate}}</span>
 			</h1>
 		</div>
-		<div class="figures " >
+		<div class="figures ion-hide" >
 			<h1>Entrepreneur-Studio en quelques chiffres</h1>
 			<ion-grid>
 				<ion-row>
