--- a/src/app/project/executive/team/team.page.html
+++ b/src/app/project/executive/team/team.page.html
@@ -6,8 +6,8 @@
 	</div>
 	<ion-item class="screenTitle" lines="none">
 		<ion-label >
-			<h2> Mon Equipe</h2>
-			<p>Une équipe compétente et complémentaire maximise les chances de réussites de votre projet</p>
+			<h2>{{'TEAM.Title' | translate }}</h2>
+			<p>{{'TEAM.SubTitle' | translate }}</p>
 			
 		</ion-label>
 
