--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,10 @@
 						<ion-badge  *ngIf="project.data.commentsNumber !==undefined">{{project.data.commentsNumber}}</ion-badge>
 						<ion-label  class="ion-margin-start withBadge"><ion-text >{{'EXECUTIVE.Comments' | translate }}</ion-text></ion-label>
 					</ion-item>
+					<ion-item lines="none"  [ngClass]="{'selected': isSelectedTab('settings') ===true} " *ngIf="accessRights.write === true" (click)="navigate('settings')" >
+						<ion-icon name="settings-outline"></ion-icon>
+						<ion-label  class="ion-margin-start"><ion-text >{{'EXECUTIVE.Settings' | translate }}</ion-text></ion-label>
+					</ion-item>
 					<ion-item lines="none"  target="_blank" [href]="slackUrl"  *ngIf="isSlackInstalled ===true" >
 						<ion-icon name="logo-slack"></ion-icon>
 						<ion-label class="ion-margin-start"><ion-text >{{'EXECUTIVE.Slack' | translate }}</ion-text></ion-label>
