--- a/src/app/project/executive/comments/comment-popover/comment-popover.component.html
+++ b/src/app/project/executive/comments/comment-popover/comment-popover.component.html
@@ -7,8 +7,8 @@
 		<ion-icon name="alert-circle-outline" class="ion-margin-end"></ion-icon>
 		<ion-label>{{'COMMENTS.Menu.MarkImportant' | translate }}</ion-label>
 	</ion-item>
-	<ion-item (click)="delete()" lines="none" class="ion-margin-end">
-		<ion-icon name="trash"></ion-icon>
+	<ion-item (click)="delete()" lines="none">
+		<ion-icon name="trash"  class="ion-margin-end"></ion-icon>
 		<ion-label>{{'COMMENTS.Menu.Remove' | translate }}</ion-label>
 	</ion-item>
 </ion-list>
