--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -287,7 +287,7 @@ ion-auto-complete ul{
   --max-height : 100%;
   --min-width: 100%;
   --height : 100%;
- 
+
   @media(min-width: 1200px) {
     --width: 90%;
     --min-width: 90%;
@@ -299,4 +299,13 @@ ion-auto-complete ul{
 }
 .sharePopoverComponent{
   --width: auto;
+}
+.projectMenu {
+  --width: 600px;
+
+  .popover-content{
+    top: 0px!important;
+    left: 12px!important;
+  }
+
 }
